--- a/runpod_app/requirements.txt
+++ b/runpod_app/requirements.txt
@@ -1,11 +1,11 @@
-transformers>=4.35.0
+fastapi==0.68.0
+uvicorn==0.15.0
 torch>=1.13.0
+torchvision>=0.14.0
+transformers>=4.35.0
 accelerate>=0.20.3
 bitsandbytes>=0.39.0
 Pillow>=9.2.0
-python-multipart>=0.0.6
+python-multipart==0.0.6
 numpy>=1.21.5
 requests>=2.28.1
-fastapi>=0.68.0
-uvicorn>=0.15.0
-
